src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>CAS_TXT_WF_Compania__c</fullName>
        <label>Companía Workflow</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Priority__c</fullName>
        <formula>CASE(TEXT(Priority), &apos;Critical&apos; , 1 ,&apos;High&apos; ,2,&apos;Medium&apos; ,3 , &apos;Low&apos;, 4, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_AplicaRevision__c</fullName>
        <defaultValue>true</defaultValue>
        <label>¿Aplicar modificaciones?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Asignar_Como_Franquiciado__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Campos casilla para identificar si en la cita de servicio se tiene que asignar como franquiciado</description>
        <label>Asignar como franquiciado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Asignar_Mizad__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si se deben asignar profesionales Mizad a las citas de la orden de trabajo.</description>
        <label>Asignar como Mizad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Asignar_territorio_prim_no_franq__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campos casilla para ampliar la búsqueda de profesionales para mirar la coincidencia de territorio en los primarios y secundarios</description>
        <label>Ampliar búsqueda de profesionales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Autoasignacion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Si está marcado indica que la cita se debe asignar al profesional que realiza la reserva.</description>
        <label>Autoasignar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Cierre_Tecnico__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cierre técnico de la orden de trabajo.</description>
        <label>Cierre Tecnico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Confianza_en_la_red__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confianza en la red</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Copia_de_Seguridad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copia de seguridad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Generar_Tarea_Semaforo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generar Tarea Semaforo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Lim_Tramitacion_Expres_Superado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Límite de Tramitación Exprés Superado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Orden_Trabajo_Facturada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check que indica si la Work Order ha sido facturada</description>
        <label>Servicio Facturado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Orden_Trabajo_Liquidada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check que indica si la Work Order ha sido liquidada</description>
        <label>Servicio Liquidado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Partidas_Modificadas_Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partidas modificadas en revisión</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Pendiente_de_Gestor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pendiente de Gestor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Reclamacion_Vinculada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Representa si existe una reclamación vinculada a una Orden de Trabajo</description>
        <label>Reclamación Vinculada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Res_Habitual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Es la residencia habitual por más de dos años</description>
        <label>Residencia Habitual Más de 2 años</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Servicio_Anulado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Orden de trabajo anulada.</description>
        <label>Servicio Anulado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Servicio_Encuestado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Representa si el servicio ya ha sido encuestado</description>
        <label>Servicio Encuestado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Servicio_Revisado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Orden de trabajo revisada.</description>
        <label>Servicio Revisado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Urgente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check que indica si la Orden de Trabajo es urgente.</description>
        <label>Urgente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Vetado_Orden_Trabajo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Debe existir la posibilidad de no facturar órdenes de trabajo. Este checkbox nos permitirá marcar las ordenes de trabajo que no deben de viajar al Facturador.</description>
        <label>Vetado Servicio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_Anulacion__c</fullName>
        <description>Representa la fecha de Anulación de una Orden de Trabajo</description>
        <label>Fecha de Anulación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_Cierre_servicio__c</fullName>
        <description>Se recoge la fecha cuando el estado de la workorder pasa a Cerrado - Albarán Recibido</description>
        <label>Fecha Cierre Servicio</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_Despertar__c</fullName>
        <description>Representa la fecha para la que una Orden de Trabajo debe &quot;despertar&quot; o la fecha para la que un profesional o gestor cree que terminará el bloqueo del estado de una Orden de Trabajo.</description>
        <label>Fecha estimada Desbloqueo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_Facturacion__c</fullName>
        <description>Representa la fecha de facturación a la Compañía Aseguradora</description>
        <label>Fecha Facturación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_Hora_Cambio_semaforo__c</fullName>
        <description>la fecha del cambio de semaforo que coincide con OTR_DAT_Fecha_cambio_estado__c mas las horas de los campos OTR_NUM_Horas_amarillo__c y OTR_NUM_Horas_verde__c</description>
        <label>Fecha semaforo rojo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_Hora_Tarea_Sin_Cita__c</fullName>
        <description>La fecha en la que se generará una tarea si el servicio se mantiene abierto sin cita y sin estar en espera por material o en espera de cliente.</description>
        <label>Fecha/Hora tarea sin cita</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_Liquidacion__c</fullName>
        <description>Representa la fecha de Liquidación a Profesional</description>
        <label>Fecha Liquidación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_Primera_Cita__c</fullName>
        <description>Fecha de la primera visita del profesional a la situación de riesgo del asegurado.</description>
        <label>Fecha de Primera Cita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_Recepcion_Albaran__c</fullName>
        <description>Recoge la hora y fecha del momento en el que se adjunta albarán a la WorkOrder</description>
        <label>Fecha Recepción Albarán</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_Ultima_Cita__c</fullName>
        <label>Fecha última cita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_cambio_estado__c</fullName>
        <description>Campo fecha que debe almacenar el último cambio de estado para controlar el semáforo visual. A completar en el trigger de creación/actualización (before) con el cambio de estado de la orden de trabajo.</description>
        <label>Fecha cambio estado</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_rechazo__c</fullName>
        <description>Guardamos la fecha de rechazo de un albarán</description>
        <label>Fecha rechazo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_revision__c</fullName>
        <description>fecha que recoge el día y la hora de cuando se ha revisado la orden de trabajo</description>
        <label>Fecha revisión</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Fecha_ultimo_C2C__c</fullName>
        <label>Fecha último C2C</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OTR_DAT_Generar_Tarea_Semaforo__c</fullName>
        <label>Fecha Generar Tarea Semaforo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTR_DIV_Importe_diferencia__c</fullName>
        <label>Importe diferencia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OTR_DIV_Importe_nuevo__c</fullName>
        <description>Campo para auditoria de gestión, guarda el importe del servicio a prof antes de impuestos después de la revisión</description>
        <label>Importe nuevo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OTR_DIV_Importe_original__c</fullName>
        <description>Campo para auditoria de gestión, guarda el importe del servicio a prof antes de impuestos antes de la revisión</description>
        <label>Importe original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OTR_DIV_Importe_recibido_de_cliente__c</fullName>
        <description>Indica el importe recibido del cliente que debe corresponderse con el importe que debe pagar como suma de todas las partidas del servicio que se le ha realizado</description>
        <label>Importe recibido de cliente</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Canal__c</fullName>
        <formula>CASE(Case.CAS_LKP_Procedencia__r.PROC_SEL_Canal__c,&quot;100&quot;,&quot;BAU&quot;,&quot;110&quot;,&quot;REAL ESTATE&quot;,&quot;120&quot;,&quot;SME&apos;S&quot;,&quot;130&quot;,&quot;B2C/DIGITAL&quot;,&quot;140&quot;,&quot;B2B2C&quot;,&quot;150&quot;,&quot;ON DEMAND&quot;,&quot;160&quot;,&quot;B2B&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Codigo_Profesional__c</fullName>
        <formula>OTR_LKP_Recurso_Servicio__r.RSE_TXT_Codigo_Recurso__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código Profesional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Compania__c</fullName>
        <formula>Case.CAS_LKP_Compania__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compañía</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_DT__c</fullName>
        <formula>(CASE(Case.CAS_SEL_Direccion_Territorial__c, 
&quot;a1&quot;, &quot;A1&quot;, 
&quot;a2&quot;, &quot;A2&quot;, 
&quot;a3&quot;, &quot;A3&quot;, 
&quot;a4&quot;, &quot;A4&quot;, 
&quot;a5&quot;, &quot;A5&quot;, 
&quot;a6&quot;, &quot;A6&quot;, 
&quot;a7&quot;, &quot;A7&quot;, 
&quot;&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección Territorial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Dias_desde_cierre_del_servicio__c</fullName>
        <formula>TODAY() -  DATEVALUE(OTR_DAT_Fecha_Cierre_servicio__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días desde el cierre del servicio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Gestor_Asignado__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gestor Asignado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Gremio_Ppal_Caso__c</fullName>
        <formula>Case.CAS_LKP_Orden_Trabajo_Principal__r.Id = Id</formula>
        <label>Gremio Ppal. Intervención</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Hora_Primera_Cita__c</fullName>
        <formula>IF(ISBLANK(TEXT(OTR_SEL_Rango_Primera_Cita__c)),
	OTR_LKP_Primera_Cita__r.ArrivalWindowStartTime,	
	DATETIMEVALUE(CASE(OTR_SEL_Rango_Primera_Cita__c,
	&quot;01&quot;, &quot;00:00 - 02:00&quot;,
	&quot;02&quot;, &quot;02:00 - 04:00&quot;,
	&quot;03&quot;, &quot;04:00 - 06:00&quot;,
	&quot;04&quot;, &quot;06:00 - 08:00&quot;,
	&quot;05&quot;, &quot;08:00 - 10:00&quot;,
	&quot;06&quot;, &quot;10:00 - 12:00&quot;,
	&quot;07&quot;, &quot;12:00 - 14:00&quot;,
	&quot;08&quot;, &quot;14:00 - 16:00&quot;,
	&quot;09&quot;, &quot;16:00 - 18:00&quot;,
	&quot;10&quot;, &quot;18:00 - 20:00&quot;,
	&quot;11&quot;, &quot;20:00 - 22:00&quot;,
	&quot;12&quot;, &quot;22:00 - 00:00&quot;,
	&quot;&quot;)))</formula>
        <label>Fecha/Hora de Primera Cita</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Identificador_CIA__c</fullName>
        <description>Identificador de la Compañía</description>
        <formula>IF(Case.CAS_LKP_Compania__r.CUE_TXT_Identificador__c != NULL, Case.CAS_LKP_Compania__r.CUE_TXT_Identificador__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identificador CIA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Importe_CIA_Intervencion__c</fullName>
        <formula>Case.CAS_DIV_Total_Facturar_CIA_AI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importe Total Intervención CIA Antes Imp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Importe_total_siniestro__c</fullName>
        <formula>TEXT(Case.CAS_DIV_Importe_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importe total siniestro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Lim_Actuac_CIA_NoPermiteUrg__c</fullName>
        <description>Indica si la Compañía del Caso no permite continuar con una Urgencia cuando el estado es PENDIENTE CIA.</description>
        <formula>IF(ISNULL(Case.CAS_LKP_Compania__c), false, Case.CAS_LKP_Compania__r.CUE_CAS_Lim_Actuac_NoPermiteUrg__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lim Actuación CIA: No Permite Urg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Limite_Actuacion_CIA__c</fullName>
        <description>Límite de actuación del siniestro de la orden de trabajo</description>
        <formula>Case.CAS_LKP_Compania__r.CUE_DIV_Limite_Actuacion__c</formula>
        <label>Límite de actuación de la CÍA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Producto__c</fullName>
        <formula>Case.CAS_FOR_Producto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Provincia__c</fullName>
        <formula>CASE(Case.CAS_SEL_DirRiesgo_Estado_Provincia__c, &quot;01&quot;, &quot;ÁLAVA&quot;, &quot;02&quot;, &quot;ALBACETE&quot;, &quot;03&quot;, &quot;ALICANTE&quot;, &quot;04&quot;, &quot;ALMERÍA&quot;, &quot;05&quot;, &quot;ÁVILA&quot;, &quot;06&quot;, &quot;BADAJOZ&quot;, &quot;07&quot;, &quot;BALEARES&quot;, &quot;08&quot;, &quot;BARCELONA&quot;, &quot;09&quot;, &quot;BURGOS&quot;, &quot;10&quot;, &quot;CÁCERES&quot;, &quot;11&quot;, &quot;CÁDIZ&quot;, &quot;12&quot;, &quot;CASTELLÓN&quot;, &quot;13&quot;, &quot;CIUDAD REAL&quot;, &quot;14&quot;, &quot;CÓRDOBA&quot;, &quot;15&quot;, &quot;LA CORUÑA&quot;, &quot;16&quot;, &quot;CUENCA&quot;, &quot;17&quot;, &quot;GERONA&quot;, &quot;18&quot;, &quot;GRANADA&quot;, &quot;19&quot;, &quot;GUADALAJARA&quot;, &quot;20&quot;, &quot;GUIPÚZCOA&quot;, &quot;21&quot;, &quot;HUELVA&quot;, &quot;22&quot;, &quot;HUESCA&quot;, &quot;23&quot;, &quot;JAÉN&quot;, &quot;24&quot;, &quot;LEÓN&quot;, &quot;25&quot;, &quot;LÉRIDA&quot;, &quot;26&quot;, &quot;LA RIOJA&quot;, &quot;27&quot;, &quot;LUGO&quot;, &quot;28&quot;, &quot;MADRID&quot;, &quot;29&quot;, &quot;MÁLAGA&quot;, &quot;30&quot;, &quot;REGIÓN DE MURCIA&quot;, &quot;31&quot;, &quot;NAVARRA&quot;, &quot;32&quot;, &quot;ORENSE&quot;, &quot;33&quot;, &quot;ASTURIAS&quot;, &quot;34&quot;, &quot;PALENCIA&quot;,&quot;35&quot;, &quot;LAS PALMAS&quot;, &quot;36&quot;, &quot;PONTEVEDRA&quot;, &quot;37&quot;, &quot;SALAMANCA&quot;, &quot;38&quot;, &quot;SANTA CRUZ DE TENERIFE&quot;, &quot;39&quot;, &quot;CANTABRIA&quot;, &quot;40&quot;, &quot;SEGOVIA&quot;, &quot;41&quot;, &quot;SEVILLA&quot;, &quot;42&quot;, &quot;SORIA&quot;, &quot;43&quot;, &quot;TARRAGONA&quot;, &quot;44&quot;, &quot;TERUEL&quot;, &quot;45&quot;, &quot;TOLEDO&quot;, &quot;46&quot;, &quot;VALENCIA&quot;, &quot;47&quot;, &quot;VALLADOID&quot;, &quot;48&quot;, &quot;VIZCAYA&quot;, &quot;49&quot;, &quot;ZAMORA&quot;, &quot;50&quot;, &quot;ZARAGOZA&quot;, &quot;51&quot;, &quot;CEUTA&quot;, &quot;52&quot;, &quot;MELILLA&quot;, &quot;AD&quot;, &quot;ANDORRA&quot;, &quot;99&quot;, &quot;DESCONOCIDO&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provincia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_RTDevName__c</fullName>
        <description>Nombre API del Tipo de Registro.</description>
        <formula>&apos;WorkOrder:&apos; + RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType DevName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Reclamacion_vinculada__c</fullName>
        <description>Sirve para indicar un &quot;Sí&quot; si la Orden de Trabajo tiene reclamación y un &quot;No&quot; en caso contrario.</description>
        <formula>IF(OTR_CAS_Reclamacion_Vinculada__c==true, &quot;Sí&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reclamación vinculada</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Semaforo__c</fullName>
        <description>Campo fórmula que mostrará una imagen en rojo/verde/amarillo en función de los días que hayan pasado entre la fecha de cambio de estado y los días permitidos en cada uno de los colores del mismo</description>
        <formula>IF(OTR_NUM_Horas_verde__c == 0 &amp;&amp; OTR_NUM_Horas_amarillo__c == 0,
	IMAGE(&apos;/servlet/servlet.FileDownload?file=0159E000000BGPG&apos;, &apos;DIAS VERDE&apos;, 30, 30),
	IF(NOW() &lt;= OTR_DAT_Fecha_cambio_estado__c + (OTR_NUM_Horas_verde__c),
		IMAGE(&apos;/servlet/servlet.FileDownload?file=0159E000000BGPG&apos;, &apos;DIAS VERDE&apos;, 30, 30), 
		IF(NOW() &lt;= OTR_DAT_Fecha_cambio_estado__c + (OTR_NUM_Horas_verde__c) + (OTR_NUM_Horas_amarillo__c), 
			IMAGE(&apos;/servlet/servlet.FileDownload?file=0159E000000BGPL&apos;, &apos;DIAS AMARILLA&apos;, 30, 30), 
			IMAGE(&apos;/servlet/servlet.FileDownload?file=0159E000000BGPB&apos;, &apos;DIAS ROJO&apos;, 30, 30) 
		) 
	)
)</formula>
        <label>Semáforo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Siniestro_Peritado__c</fullName>
        <formula>Case.CAS_CAS_Requiere_Perito__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siniestro Peritado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Subcanal__c</fullName>
        <formula>CASE(Case.CAS_LKP_Procedencia__r.PROC_SEL_Subcanal__c,&quot;1001&quot;,&quot;INSURERS&quot;,&quot;1002&quot;,&quot;NEW INSURERS&quot;,&quot;1003&quot;,&quot;ASISTENCIAS&quot;,&quot;1011&quot;,&quot;REAL ESTATE&quot;,&quot;1021&quot;,&quot;SME&apos;S&quot;,&quot;1031&quot;,&quot;COLECTIVO&quot;,&quot;1032&quot;,&quot;DIGITAL&quot;,&quot;1033&quot;,&quot;MEMBER&quot;,&quot;1041&quot;,&quot;WEB&quot;,&quot;1042&quot;,&quot;RETAIL&quot;,&quot;1043&quot;,&quot;COMUNIDADES&quot;,&quot;1044&quot;,&quot;Prescriptor&quot;,&quot;1045&quot;,&quot;B2C&quot;,&quot;1061&quot;,&quot;B2B&quot;,&quot;1062&quot;,&quot;PARTNER&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subcanal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Telefono_VDN__c</fullName>
        <formula>Case.CAS_LKP_Compania__r.CUE_LKP_VDN_principal__r.VDN_TLF_Telefono__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teléfono VDN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Tiempo_de_citas_completas__c</fullName>
        <formula>TEXT((FLOOR(OTR_NUM_Duracion_de_citas_completadas__c/60))) + &apos;horas&apos; + &apos; &apos; + TEXT((MOD(OTR_NUM_Duracion_de_citas_completadas__c,60))) + &apos;minutos&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tiempo de citas completas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Tipo_Trabajo__c</fullName>
        <formula>WorkType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Trabajo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Tipo_de_Caso__c</fullName>
        <formula>Case.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Intervención</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Usuario_profesional__c</fullName>
        <formula>IF (OTR_LKP_Recurso_Servicio__r.RelatedRecord.Id = $User.Id  &amp;&amp; OTR_LKP_Recurso_Servicio__r.RelatedRecord.Id != null &amp;&amp; OTR_LKP_Recurso_Servicio__r.RelatedRecord.Id!= &apos;&apos;, 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usuario profesional</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_importe_E21__c</fullName>
        <formula>IF(
      OTR_DAT_Fecha_cambio_estado__c
      + OTR_NUM_Horas_verde__c  
      + OTR_NUM_Horas_amarillo__c &gt; NOW(), 
      IF(
         AND(NOW() - OTR_DAT_Fecha_cambio_estado__c + OTR_NUM_Horas_verde__c + 
            OTR_NUM_Horas_amarillo__c  &gt;= 1,
            NOW() - OTR_DAT_Fecha_cambio_estado__c + OTR_NUM_Horas_verde__c + 
            OTR_NUM_Horas_amarillo__c &lt; 2
              ), 
         FLOOR((NOW() - OTR_DAT_Fecha_cambio_estado__c + OTR_NUM_Horas_verde__c + 
            OTR_NUM_Horas_amarillo__c))*  VALUE($Label.IMPORTE_EVENTO_E21_INICIAL) ,
          (FLOOR((NOW() - OTR_DAT_Fecha_cambio_estado__c + OTR_NUM_Horas_verde__c + 
            OTR_NUM_Horas_amarillo__c) - 1)* VALUE($Label.IMPORTE_EVENTO_E21_SUCESIVO)) + 
            VALUE($Label.IMPORTE_EVENTO_E21_INICIAL)
         ),
      0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importe evento E21</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OTR_HOR_Hora_de_revision__c</fullName>
        <label>Hora de revisión</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>OTR_LKP_Cuenta_Profesional_Historico__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cuenta Profesional Contrato (Histórico) vinculada a la Orden de Trabajo. Representa la FK al objeto Account. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo External ID del objeto Account (Account.CUE_TXT_Identificador): Código único del Profesional Contrato</description>
        <label>Cuenta Profesional (Histórico)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>El valor no existe o no coinciden los criterios de filtro. La cuenta debe ser un Profesional Contrato.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Profesional Contrato</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Servicios históricos</relationshipLabel>
        <relationshipName>ordenes_de_trabajo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTR_LKP_Factura__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FacturaAsociada</label>
        <referenceTo>Factura__c</referenceTo>
        <relationshipLabel>Órdenes de trabajo</relationshipLabel>
        <relationshipName>ordenes_de_trabajo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTR_LKP_Gestor_revision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gestor revisión</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ordenes_de_trabajo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTR_LKP_Linea_Contrato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Línea de Contrato</label>
        <referenceTo>Linea_Contrato__c</referenceTo>
        <relationshipLabel>Órdenes de trabajo</relationshipLabel>
        <relationshipName>OTR_REL_Linea_Contrato</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTR_LKP_Primera_Cita__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primera Cita de Servicio vinculada a la Orden de Trabajo. Representa la FK al objeto ServiceAppoinment. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo External ID del objeto ServiceAppoinment</description>
        <label>Primera Cita de Servicio</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Órdenes de trabajo</relationshipLabel>
        <relationshipName>Ordenes_de_trabajo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTR_LKP_Profesional_Programado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profesional Programado</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Órdenes de trabajo (Profesional Programado)</relationshipLabel>
        <relationshipName>rdenes_de_trabajo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTR_LKP_Recurso_Servicio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Profesional (Perfil Técnico) vinculado a la Orden de Trabajo. Representa la FK al objeto ServiceResource. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo External ID del objeto ServiceResource (ServiceResources.RSE_TXT_Codigo_Recurso__c): Código único del Profesional</description>
        <label>Profesional</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>ServiceResource.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status</field>
                <operation>equals</operation>
                <value>Anulado, Anulado desde Inactivo, Cerrado, Cerrado Albarán Recibido, Cerrado Pdte. Albarán, Revisado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Órdenes de trabajo</relationshipLabel>
        <relationshipName>OTR_REL_Recurso_Servicio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTR_LKP_Scheduling_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Almacena el Id de la política de programación cuando la WO es Mizad o Urgente.</description>
        <label>Scheduling Policy</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Órdenes de trabajo</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTR_NUM_Duracion_de_citas_completadas__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Recoge los minutos correspondientes a la duración de todas las  citas de servicio completadas de una orden de trabajo.</description>
        <label>Duración de citas completadas (Minutos)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTR_NUM_Horas_amarillo__c</fullName>
        <description>Campo numérico que almacena el número de horas que una orden de trabajo se considera en estado de semáforo “amarillo”. A completar en el trigger de creación/actualización (before) con el cambio de estado de la orden de trabajo en función de los datos almacenado en el custom metadata anterior</description>
        <label>Dias Amarillo</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTR_NUM_Horas_verde__c</fullName>
        <description>Campo numérico que almacena el número de horas que una orden de trabajo se considera en estado de semáforo “verde”. A completar en el trigger de creación/actualización (before) con el cambio de estado de la orden de trabajo en función de los datos almacenado en el custom metadata anterior</description>
        <label>Dias Verde</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTR_NUM_Numero_C2C__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Número C2C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTR_NUM_Numero_de_citas_completadas__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indica el número de citas completadas que pertenecen a una orden de trabajo concreto.</description>
        <label>Número de citas completadas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTR_RES_Facturar_Cliente_AI__c</fullName>
        <label>Importe Total Facturar Cliente antes Imp</label>
        <summarizedField>WorkOrderLineItem.PAR_DIV_Cargar_Cliente_AI__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Rechazada, Rechazada por Cliente, Rechazada por Perito, Rechazada por Gestor, Rechazada por CIA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.PAR_CAS_Orden_Trabajo_Anulada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>